<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardBackgroundColor="@color/main"
    app:cardCornerRadius="@dimen/_20sdp"
    app:cardElevation="@dimen/_8sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_14sdp">

        <RelativeLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:cardBackgroundColor="@color/bg_alt"
                app:cardCornerRadius="@dimen/_100sdp">

                <TextView
                    android:id="@+id/cardTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lexend_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:text="@string/district_bank"
                    android:textColor="@color/main"
                    android:textSize="@dimen/_14sdp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/hideButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/main"
                    app:cardCornerRadius="@dimen/_100sdp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/hideImg"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_margin="@dimen/_8sdp"
                        android:src="@drawable/ic_show"
                        app:tint="@color/gray" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/optionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/main"
                    app:cardCornerRadius="@dimen/_100sdp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/optionImg"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="@dimen/_12sdp"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:src="@drawable/ic_menu_vertical"
                        app:tint="@color/gray" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/cardNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleBar"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/lexend_semibold"
            android:text="@string/demo_card_number"
            android:textColor="@color/main_alt"
            android:textSize="@dimen/_20sdp" />

        <LinearLayout
            android:id="@+id/cvvLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardNumberText"
            android:layout_alignEnd="@+id/cardNumberText"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/cvv"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/cvvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/demo_cvv"
                android:textColor="@color/main_alt"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvvLayout"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:id="@+id/cardHolderNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_light"
                android:text="@string/demo_card_holder_name"
                android:textColor="@color/bg_alt"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/expDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/lexend_regular"
                android:text="@string/demo_exp_date"
                android:textColor="@color/bg_alt"
                android:textSize="@dimen/_16sdp" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>